Ajout présentation perso

--- a/index.html
+++ b/index.html
@@ -23,6 +23,39 @@
 						<small>Crée par <a href="https://www.linkedin.com/in/ivan-mananjara-8b773b72/">Ivan M.</a></small> 
 					</p>
 				</section>
+				<section data-auto-animate data-auto-animate-id="who-am-i">
+					<div class="columns" style="display: flex; justify-content: space-between; align-items: center;">
+						<div>
+							<img style="max-width: 300px; margin: 0 auto; border-radius: 50%;" src="images/photo-portrait-crop.png" alt="C'est moi">
+						</div>
+						<div style="width: 60%;">
+							<p>Ivan Mananjara</p>
+						</div>
+					</div>
+				</section>
+				<section data-auto-animate data-auto-animate-id="who-am-i">
+					<div class="columns" style="display: flex; justify-content: space-between; align-items: center;">
+						<div>
+							<img style="max-width: 300px; margin: 0 auto; border-radius: 50%;" src="images/photo-portrait-crop.png" alt="C'est moi">
+						</div>
+						<div style="width: 60%;">
+							<p>Ivan Mananjara</p>
+							<p>Développeur FullStack Java / Javascript</p>
+						</div>
+					</div>
+				</section>
+				<section data-auto-animate data-auto-animate-id="who-am-i">
+					<div class="columns" style="display: flex; justify-content: space-between; align-items: center;">
+						<div>
+							<img style="max-width: 300px; margin: 0 auto; border-radius: 50%;" src="images/photo-portrait-crop.png" alt="C'est moi">
+						</div>
+						<div style="width: 60%;">
+							<p>Ivan Mananjara</p>
+							<p>Développeur FullStack Java / Javascript</p>
+							<p>9 ans d'expérience</p>
+						</div>
+					</div>
+				</section>
 				<section data-auto-animate data-auto-animate-id="masterclass-intro">
 					<h3>La formation</h3>
 				</section>
