Zones de travail

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 					<p>Vous avez besoin d'un ordinateur avec Git installé, d'un papier et d'un stylo</p>
 				</section>
 				<section data-auto-animate data-auto-animate-id="summary">
-					<h3>Sommaire</h3>
+					<pre><code class="bash">mbp-de-user:~ user$ git checkout Sommaire</code></pre>
 				</section>
 				<section data-auto-animate data-auto-animate-id="summary">
-					<h3>Sommaire</h3>
+					<pre><code class="bash">mbp-de-user:~ user$ git checkout Sommaire</code></pre>
 					<svg width="800" height="300" id="summary-svgs">
 						<g>
 							<line fill="none" stroke="#000" x1="-209" y1="504" x2="-209" y2="503" id="svg_16"/>
@@ -187,7 +187,7 @@
 							   <path stroke="null" id="svg_11" d="m116.96182,534.85901c4.3634,0 6.93768,-5.42865 4.22772,-9.09991c-2.01306,-2.72711 -4.79602,-4.79541 -8.06729,-5.80475l-13.66141,-4.21771c-1.41637,-1.93713 -1.76012,-4.23926 -1.38742,-6.78522l2.416,-10.0946c1.27882,-0.05847 1.83382,-0.7215 1.8093,-1.86346c-0.02454,-1.07495 0.32106,-2.10876 0.8299,-3.03186c0.08156,-0.14905 0.13332,-0.28912 0.13332,-0.40027c0.0027,-0.54321 -0.69107,-1.44568 -0.604,-1.98029c0.16324,-0.99316 1.49092,-2.09729 1.21622,-3.0611c-0.70198,-2.4682 -2.56303,-1.30273 -2.56303,-1.30273s1.5943,-11.73904 0,-15.10672c-1.10205,-2.32507 -2.54944,-4.17102 -4.22003,-5.57303c-0.00282,-0.0029 -0.00552,-0.00586 -0.00821,-0.00882c-2.65012,-2.61996 -6.19537,-2.5675 -6.51093,-4.64706c0,0 -0.52515,0.30084 -0.44899,1.41663c0.02184,0.33875 0.09799,0.74765 0.26123,1.24716c-0.87614,-0.44684 -1.4339,-0.94922 -1.77667,-1.44592c-0.99313,-1.44275 -0.215,-2.85654 -0.215,-2.85654c-6.23068,0.18991 -8.84267,4.47473 -8.92165,4.60922c-0.0027,0.00284 -0.0027,0.00284 -0.0027,0.00284c-3.17513,1.53629 -5.95586,4.00748 -7.77888,7.25552c-1.8147,3.23636 0,15.10672 0,15.10672s-1.86105,-1.16547 -2.56291,1.30273c-0.27484,0.96393 1.05286,2.06799 1.21608,3.0611c0.08708,0.53455 -0.60669,1.43707 -0.60669,1.98029c0,0.11108 0.05176,0.25122 0.136,0.40027c0.50883,0.9231 0.85175,1.95691 0.82991,3.03186c-0.02454,1.14197 0.53053,1.80499 1.80942,1.86346l2.41599,10.0946c0.63181,2.48346 0.25731,4.76312 -1.38753,6.78522l-13.66129,4.21771c-3.27119,1.00928 -6.05475,3.07739 -8.06812,5.80438c-2.71048,3.67114 -0.13614,9.10028 4.22746,9.10028l60.92421,0z" fill="#EC6E62"/>
 							  </g>
 							 </g>
-							 <g stroke="null" class="fragment" data-fragment-index="0">
+							 <g stroke="null">
 							  <g stroke="null">
 							   <path stroke="null" fill="#E7E3E6" d="m446,116.54231c0,10.67212 -8.27713,19.31378 -18.48425,19.31378c-10.22202,0 -66.02136,0 -70.07706,0c-8.51849,0 -15.43869,-7.22498 -15.43869,-16.11847c0,-8.90916 6.9202,-16.1342 15.43869,-16.1342c0.42212,0 0.8443,0.01581 1.26636,0.04729c3.03049,-9.9954 12.00125,-17.25185 22.5701,-17.25185c5.9855,0 11.44336,2.31398 15.60452,6.13895c2.42743,-2.73888 5.91019,-4.45468 9.76984,-4.45468c6.39255,0 11.74481,4.67503 13.05646,10.93976c2.36716,-1.14898 5.02066,-1.79443 7.80978,-1.79443c10.20712,0 18.48425,8.64159 18.48425,19.31386z"/>
 							   <g stroke="null">
@@ -517,6 +517,41 @@
 							</g>
 
 						   </svg>
+					</section>
+					<section data-auto-animate data-auto-animate-id="working-zones">
+						<h3>Les zones de travail</h3>
+					</section>
+					<section data-auto-animate data-auto-animate-id="working-zones">
+						<h3>Les zones de travail</h3>
+						<svg width="800" height="600">
+							<g>
+							 <path class="fragment" data-fragment-index="3" stroke="#000" stroke-width="0" id="svg_7" d="m36,80l128,0l0,50l-128,0l0,-50z" opacity="undefined" fill="#c9c95a"/>
+							 <path stroke="#000" stroke-width="0" id="svg_18" d="m185,80l128,0l0,50l-128,0l0,-50z" opacity="undefined" fill="#ff5656"/>
+							 <path class="fragment" data-fragment-index="0" stroke="#000" stroke-width="0" id="svg_20" d="m333,80l128,0l0,50l-128,0l0,-50z" opacity="undefined" fill="#6bbace"/>
+							 <path class="fragment" data-fragment-index="1" stroke="#000" stroke-width="0" id="svg_21" d="m482,80l128,0l0,50l-128,0l0,-50z" opacity="undefined" fill="#8cd79f"/>
+							 <path class="fragment" data-fragment-index="2" stroke="#000" stroke-width="0" id="svg_22" d="m630,80l128,0l0,50l-128,0l0,-50z" opacity="undefined" fill="#b2b2b2"/>
+							 <text class="fragment" data-fragment-index="3" font-weight="bold" xml:space="preserve" text-anchor="start" font-family="Noto Sans JP" font-size="15" id="svg_23" y="110" x="67" stroke-width="0" stroke="#000" fill="#ffffff">Stash zone</text>
+							 <text font-weight="bold" xml:space="preserve" text-anchor="start" font-family="Noto Sans JP" font-size="15" id="svg_24" y="110" x="189" stroke-width="0" stroke="#000" fill="#ffffff">Working directory</text>
+							 <text class="fragment" data-fragment-index="0" font-weight="bold" xml:space="preserve" text-anchor="start" font-family="Noto Sans JP" font-size="15" id="svg_25" y="110" x="356" stroke-width="0" stroke="#000" fill="#ffffff">Staging zone</text>
+							 <text class="fragment" data-fragment-index="1" font-weight="bold" xml:space="preserve" text-anchor="start" font-family="Noto Sans JP" font-size="15" id="svg_27" y="110" x="494" stroke-width="0" stroke="#000" fill="#ffffff">Local repository</text>
+							 <text class="fragment" data-fragment-index="2" font-weight="bold" xml:space="preserve" text-anchor="start" font-family="Noto Sans JP" font-size="15" id="svg_28" y="110" x="635" stroke-width="0" stroke="#000" fill="#ffffff">Remote repository</text>
+							 <line class="fragment" data-fragment-index="3" stroke="#000" id="svg_29" y2="477" x2="100" y1="130" x1="100" fill="none"/>
+							 <line stroke="#000" id="svg_31" y2="477" x2="250" y1="130" x1="250" fill="none"/>
+							 <line class="fragment" data-fragment-index="0" stroke="#000" id="svg_32" y2="477" x2="397" y1="130" x1="397" fill="none"/>
+							 <line class="fragment" data-fragment-index="1" stroke="#000" id="svg_33" y2="477" x2="545" y1="130" x1="545" fill="none"/>
+							 <line class="fragment" data-fragment-index="2" stroke="#000" id="svg_34" y2="477" x2="692" y1="130" x1="692" fill="none"/>
+							 <path class="fragment fade-right" data-fragment-index="4" stroke-width="0" stroke="#000" id="svg_41" d="m253.66,174.09999l103.5,0l34.5,23.99979l-34.5,24.00021l-103.5,0l34.5,-24.00021l-34.5,-23.99979z" fill="#7f003f"/>
+							 <path class="fragment fade-right" data-fragment-index="5" stroke-width="0" stroke="#000" id="svg_42" d="m399.66,174.09999l103.5,0l34.50003,23.99979l-34.50003,24.00021l-103.5,0l34.5,-24.00021l-34.5,-23.99979z" fill="#7f003f"/>
+							 <path class="fragment fade-right" data-fragment-index="6" stroke-width="0" stroke="#000" id="svg_43" d="m548.66003,175.09999l103.49994,0l34.50006,23.99979l-34.50006,24.00021l-103.49994,0l34.49994,-24.00021l-34.49994,-23.99979z" fill="#7f003f"/>
+							 <path class="fragment" data-fragment-index="7" stroke-width="0" stroke="#000" transform="rotate(180 469.66 303.1)" id="svg_44" d="m253.66003,279.10001l323.99982,0l108.00018,23.99979l-108.00018,24.00021l-323.99982,0l107.99982,-24.00021l-107.99982,-23.99979z" fill="#7f003f"/>
+							 <path class="fragment" data-fragment-index="8" stroke-width="0" transform="rotate(180 174.66 395.1)" stroke="#000" id="svg_45" d="m105.66,371.10001l103.5,0l34.5,23.99979l-34.5,24.00021l-103.5,0l34.5,-24.00021l-34.5,-23.99979z" fill="#7f003f"/>
+							 <text class="fragment fade-right" data-fragment-index="4" font-style="italic" xml:space="preserve" text-anchor="start" font-family="Noto Sans JP" font-size="15" id="svg_48" y="203" x="301" stroke-width="0" stroke="#000" fill="#ffffff">git add</text>
+							 <text class="fragment fade-right" data-fragment-index="5" font-style="italic" xml:space="preserve" text-anchor="start" font-family="Noto Sans JP" font-size="15" id="svg_50" y="203" x="443" stroke-width="0" stroke="#000" fill="#ffffff">git commit</text>
+							 <text class="fragment fade-right" data-fragment-index="6" font-style="italic" xml:space="preserve" text-anchor="start" font-family="Noto Sans JP" font-size="15" id="svg_51" y="203" x="598" stroke-width="0" stroke="#000" fill="#ffffff">git push</text>
+							 <text class="fragment" data-fragment-index="7" style="cursor: move;" font-style="italic" xml:space="preserve" text-anchor="start" font-family="Noto Sans JP" font-size="15" id="svg_52" y="306" x="369" stroke-width="0" stroke="#000" fill="#ffffff">git pull (git fetch + git merge)</text>
+							 <text class="fragment" data-fragment-index="8" font-style="italic" xml:space="preserve" text-anchor="start" font-family="Noto Sans JP" font-size="15" id="svg_53" y="400" x="148" stroke-width="0" stroke="#000" fill="#ffffff">git stash</text>
+							</g>
+						</svg>
 					</section>
 				</section>
 				<section>
