Arborescence du projet

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 				</section>
 				<section>
 					<section>
-						<h3>Rappels sur Git</h3>
+						<h2>Rappels sur Git</h2>
 					</section>
 					<section data-auto-animate data-auto-animate-id="what-is-git">
 						<h3>Qu'est-ce que Git ?</h3>
@@ -604,12 +604,42 @@
 					</section>
 				</section>
 				<section>
-					<section data-auto-animate data-auto-animate-id="git-internals">
-						<h3>Dans les entrailles de Git</h3>
+					<section>
+						<h2>Dans les entrailles de Git</h2>
 					</section>
-					<section data-auto-animate data-auto-animate-id="git-internals">
-						<h3>Dans les entrailles de Git</h3>
-						<img src="images/dossier-git.png" alt="dossier git" style="height: 250px; margin: 0 auto 4rem auto; background: transparent;" class="dossier-git">
+					<section data-auto-animate data-auto-animate-id="inside-git-folder">
+						<p>Regardons ce qu'il y a dans le <strong>.git</strong>...</p>
+					</section>
+					<section data-auto-animate data-auto-animate-id="inside-git-folder">
+						<p>Regardons ce qu'il y a dans le <strong>.git</strong>...</p>
+						<img src="images/dossier-git.png" alt="dossier git" style="height: 300px; margin: 0 auto 4rem auto; background: transparent;" class="dossier-git">
+					</section>
+					<section>
+						<p>Arborescence du projet</p>
+						<svg width="800" height="500">
+							<g id="Layer_1">
+								<g stroke="null">
+								<path stroke="null" fill="#000000" d="m417.55234,119.72556c-1.3656,1.75439 -3.17621,2.88287 -5.17145,3.07343l-5.5144,0.52649c-11.62823,1.11011 -23.30127,1.11011 -34.92969,0l-5.09735,-0.4866c-4.02686,-0.38455 -7.34824,-4.35681 -8.07382,-9.65582c-1.47009,-10.73672 -1.72183,-21.70764 -0.74652,-32.54434l0.9173,-10.19409c0.54446,-6.04977 4.39069,-10.60266 8.95703,-10.60266l7.71521,0c3.76331,0 6.89871,3.58713 7.59061,8.33868l27.99289,0c4.39835,0 8.14456,4.26442 8.8378,10.05988l0.21588,1.80359c0.04544,0.37894 0.0889,0.75803 0.13089,1.13754l1.13126,0c4.95731,0 8.36551,6.64807 6.56897,12.81329l-4.20685,14.43408c-1.30627,4.48175 -3.49765,8.37903 -6.31775,11.29654zm-2.50928,-40.42276l0.21588,1.80344c0.00262,0.02509 0.00565,0.05029 0.00873,0.07541l-31.35226,0c-3.82391,0 -7.25421,3.13617 -8.63461,7.89474l-7.85077,27.06271l-0.23022,-0.02191c-1.72873,-0.16495 -3.15466,-1.87024 -3.46616,-4.14526c-1.37918,-10.07236 -1.61526,-20.36395 -0.70044,-30.52966l0.91745,-10.19423c0.23956,-2.66307 1.93277,-4.66724 3.94278,-4.66724l7.71521,0c1.48163,0 2.68262,1.60257 2.68262,3.57959c0,2.62839 1.5968,4.75908 3.56662,4.75908l29.33426,0c1.91641,0 3.54895,1.85815 3.85092,4.38333zm-42.34348,37.33905c11.25519,1.04901 22.55215,1.03653 33.80667,-0.03809l5.5144,-0.52658l0.65491,-0.08176l-0.00443,-0.01083c2.96448,-2.23187 5.25858,-5.76483 6.49222,-9.99817l4.20679,-14.43411c0.50909,-1.74722 -0.45682,-3.63184 -1.86218,-3.63184l-37.59256,0c-1.73828,0 -3.29742,1.42548 -3.92493,3.58865l-7.29089,25.13272z" clip-rule="evenodd" fill-rule="evenodd"/>
+								</g>
+								<g stroke="null">
+								<path stroke="null" fill="#000000" d="m544.25,354.76923c0,-5.25729 4.64691,-9.51923 10.37903,-9.51923l30.14368,0c2.12793,0 4.12524,0.94006 5.36584,2.52536l11.37231,14.53122c0.80579,1.02954 1.23914,2.26498 1.23914,3.53232l0,37.39188c0,5.25739 -4.64679,9.51923 -10.37903,9.51923l-37.74194,0c-5.73212,0 -10.37903,-4.26184 -10.37903,-9.51923l0,-48.46155zm10.37903,-4.32693c-2.60559,0 -4.71777,1.93719 -4.71777,4.32693l0,48.46155c0,2.38983 2.11218,4.3269 4.71777,4.3269l37.74194,0c2.60571,0 4.71777,-1.93707 4.71777,-4.3269l0,-34.97171l-12.26617,0c-1.56323,0 -2.83063,-1.16245 -2.83063,-2.59616l0,-15.22061l-27.36292,0z" clip-rule="evenodd" fill-rule="evenodd"/>
+								</g>
+								<g stroke="null">
+								<path stroke="null" fill="#000000" d="m599.08795,241.88361c-1.42316,1.75439 -3.31012,2.88287 -5.38953,3.07343l-5.74701,0.52646c-12.11865,1.11014 -24.28406,1.11014 -36.40295,0l-5.31238,-0.48654c-4.19666,-0.38458 -7.6582,-4.35684 -8.41437,-9.65585c-1.5321,-10.73676 -1.79443,-21.70764 -0.77808,-32.54434l0.95599,-10.19409c0.5675,-6.04977 4.57593,-10.60266 9.33484,-10.60266l8.04065,0c3.92206,0 7.1897,3.58714 7.91077,8.33868l29.17358,0c4.58392,0 8.48816,4.26443 9.21063,10.05988l0.22498,1.80359c0.04736,0.37894 0.09265,0.75803 0.13641,1.13754l1.17896,0c5.16644,0 8.71838,6.64807 6.84607,12.81326l-4.38428,14.43414c-1.36139,4.48172 -3.6452,8.379 -6.58429,11.29651zm-2.61505,-40.42276l0.22498,1.80341c0.00275,0.02512 0.00586,0.05032 0.00903,0.07544l-32.67468,0c-3.98517,0 -7.56018,3.1362 -8.99878,7.89474l-8.18188,27.06271l-0.23999,-0.02194c-1.80164,-0.16492 -3.28766,-1.87018 -3.6123,-4.14526c-1.43738,-10.07233 -1.68341,-20.36392 -0.72998,-30.52963l0.95612,-10.19421c0.24969,-2.66309 2.01428,-4.66725 4.10907,-4.66725l8.04065,0c1.54413,0 2.79578,1.60258 2.79578,3.57961c0,2.62839 1.66418,4.75909 3.7171,4.75909l30.57147,0c1.99731,0 3.69873,1.85812 4.01343,4.3833zm-44.12952,37.33908c11.72992,1.04898 23.50336,1.03647 35.2326,-0.03812l5.74701,-0.52661l0.6825,-0.08173l-0.00458,-0.01083c3.08948,-2.23187 5.48041,-5.76486 6.76605,-9.99817l4.38422,-14.43411c0.53058,-1.74722 -0.47607,-3.63184 -1.94073,-3.63184l-39.17822,0c-1.81158,0 -3.43652,1.42545 -4.09039,3.58865l-7.59845,25.13275z" clip-rule="evenodd" fill-rule="evenodd"/>
+								</g>
+								<g stroke="null">
+								<path stroke="null" fill="#000000" d="m206.25,192.0513c0,-5.41306 4.88522,-9.8013 10.91129,-9.8013l31.68951,0c2.23706,0 4.33682,0.96793 5.64102,2.60022l11.95554,14.96176c0.84711,1.06006 1.30264,2.33209 1.30264,3.63696l0,38.49979c0,5.41315 -4.8851,9.80127 -10.91129,9.80127l-39.67743,0c-6.02606,0 -10.91129,-4.38812 -10.91129,-9.80127l0,-49.89743zm10.91129,-4.45517c-2.7392,0 -4.95969,1.99463 -4.95969,4.45517l0,49.89743c0,2.46063 2.22049,4.45511 4.95969,4.45511l39.67743,0c2.73932,0 4.95969,-1.99448 4.95969,-4.45511l0,-36.0079l-12.89517,0c-1.64337,0 -2.9758,-1.1969 -2.9758,-2.6731l0,-15.6716l-28.76614,0z" clip-rule="evenodd" fill-rule="evenodd"/>
+								</g>
+								<line stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_5" y2="187" x2="267" y1="111" x1="354" stroke="#000" fill="none"/>
+								<line stroke-linecap="undefined" stroke-linejoin="undefined" id="svg_6" y2="194" x2="533" y1="114" x1="428" stroke="#000" fill="none"/>
+								<text font-style="italic" xml:space="preserve" text-anchor="start" font-family="Noto Sans JP" font-size="14" id="svg_7" y="271" x="218" stroke-width="0" stroke="#000" fill="#000000">first.txt</text>
+								<text stroke="#000" font-style="italic" xml:space="preserve" text-anchor="start" font-family="Noto Sans JP" font-size="14" id="svg_8" y="264" x="538" stroke-width="0" fill="#000000">First folder</text>
+								<text style="cursor: move;" font-style="italic" xml:space="preserve" text-anchor="start" font-family="Noto Sans JP" font-size="14" id="svg_9" y="142" x="355" stroke-width="0" stroke="#000" fill="#000000">tp-git-objects</text>
+								<text font-style="italic" xml:space="preserve" text-anchor="start" font-family="Noto Sans JP" font-size="14" id="svg_10" y="431" x="547" stroke-width="0" stroke="#000" fill="#000000">second.txt</text>
+								<line id="svg_11" y2="338" x2="572" y1="276" x1="572" stroke="#000" fill="none"/>
+								<line id="svg_12" y2="281" x2="927" y1="282" x1="925" stroke="#000" fill="none"/>
+							</g>
+						</svg>
 					</section>
 					<section>
 						<h3>Les objets Git</h3>
