--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,115 @@
 						</svg>
 					</section>
 					<section>
+						<img src="images/you-are-here.jpg" alt="Vous êtes ici" class="you-are-here"/>
+					</section>
+					<section data-auto-animate data-auto-animate-id="head-concepts">
 						<h3>Le HEAD</h3>
+					</section>
+					<section data-auto-animate data-auto-animate-id="head-concepts">
+						<h3>Le HEAD</h3>
+						<p>Où est-ce que je suis dans l'historique ?</p>
+					</section>
+					<section data-auto-animate data-auto-animate-id="head-concepts">
+						<h3>Le HEAD</h3>
+						<p>Où est-ce que je suis dans l'historique ?</p>
+						<p>Référence implicite pour certaines commandes (git log, git show...)</p>
+					</section>
+					<section data-auto-animate data-auto-animate-id="head-concepts">
+						<h3>Le HEAD</h3>
+						<p>Où est-ce que je suis dans l'historique ?</p>
+						<p>Référence implicite pour certaines commandes (git log, git show...)</p>
+						<p style="font-style: italic;">git/HEAD</p>
+					</section>
+					<section>
+						<table>
+							<thead>
+								<tr>
+									<th>Si HEAD pointe sur une branche</th>
+									<th>Si HEAD pointe sur un commit</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td style="border: none !important;" data-fragment-index="0" class="fragment fade-up">Mode <strong>attaché</strong></td>
+									<td style="border: none !important;" class="fragment fade-up">Mode <strong>détaché</strong></td>
+								</tr>
+								<tr>
+									<td data-fragment-index="1" class="fragment fade-up">Modifier l'historique</td>
+									<td class="fragment fade-up">Analyser un commit, tester des commandes</td>
+								</tr>
+							</tbody>
+						</table>
+					</section>
+					<section data-auto-animate data-auto-animate-id="head-movement">
+						<h3>Déplacements du HEAD</h3>
+					</section>
+					<section data-auto-animate data-auto-animate-id="head-movement">
+						<h3>Déplacements du HEAD</h3>
+						<div style="display: flex; justify-content: space-between">
+							<svg width="500" height="500">
+								<g>
+									<line id="svg_16" y2="503" x2="-209" y1="504" x1="-209" stroke="#000" fill="none"/>
+									<ellipse stroke-width="0" ry="35" rx="35" id="svg_8" cy="428" cx="146" stroke="#000" fill="#8CD79F"/>
+									<ellipse stroke-width="0" ry="35" rx="35" id="svg_2" cy="313" cx="146" stroke="#000" fill="#8CD79F"/>
+									<ellipse stroke-width="0" ry="35" rx="35" id="svg_3" cy="198" cx="316" stroke="#000" fill="#6bbace"/>
+									<line fill="none" stroke="#000" x1="146" y1="353" x2="146" y2="388" id="svg_51"/>
+									<line stroke="#000" fill="none" x1="232.43797" y1="188.98582" x2="227.92696" y2="317.97324" id="svg_53" transform="rotate(53.5937 230.182 253.48)"/>
+									<g data-fragment-index="2" class="fragment fade-out">
+										<ellipse stroke-width="0" ry="35" rx="35" id="svg_4" cy="83" cx="316" stroke="#000" fill="#6bbace"/>
+										<line fill="none" stroke="#000" x1="317" y1="124" x2="317" y2="159" id="svg_54"/>
+									</g>
+									<g data-fragment-index="0" class="fragment fade-out">
+										<path fill="#aa56ff" d="m34.80499,290.48499l54.75,0l18.25001,20l-18.25001,20l-54.75,0l18.25,-20l-18.25,-20z" id="svg_59" stroke-width="0" stroke="#000"/>
+									</g>
+									<g data-fragment-index="2" class="fragment fade-out">
+										<path fill="#bf5f00" d="m204.80499,62.48499l54.75,0l18.25,20.00002l-18.25,20l-54.75,0l18.25,-20l-18.25,-20.00002z" id="svg_69" stroke-width="0" stroke="#000"/>
+									</g>
+									<text fill="#ffffff" stroke="#000" stroke-width="0" x="59" y="314" id="svg_74" font-size="12" font-family="Noto Sans JP" text-anchor="start" xml:space="preserve" font-weight="bold">master</text>
+									<text fill="#ffffff" stroke="#000" stroke-width="0" x="226" y="86" id="svg_75" font-size="12" font-family="Noto Sans JP" text-anchor="start" xml:space="preserve" font-weight="bold">branch1</text>
+
+									<line fill="none" stroke="#000" x1="-406" y1="-83" x2="-405" y2="-82" id="svg_12"/>
+									<g data-fragment-index="0" class="fragment">
+										<ellipse stroke-width="0" ry="35" rx="35" id="svg_1" cy="199" cx="146" stroke="#000" fill="#8CD79F"/>
+										<line fill="none" stroke="#000" x1="146" y1="239" x2="146" y2="274" id="svg_5"/>
+									</g>
+									<g data-fragment-index="0" class="fragment fade-out">
+										<path transform="rotate(180 221.305 310.485)" fill="#ff5656" d="m184.80499,290.48499l54.75,0l18.25,20l-18.25,20l-54.75,0l18.25,-20l-18.25,-20z" id="svg_6" stroke-width="0" stroke="#000"/>
+										<text fill="#ffffff" stroke="#000" stroke-width="0" x="201" y="314" id="svg_7" font-size="12" font-family="Noto Sans JP" text-anchor="start" xml:space="preserve" font-weight="bold">HEAD</text>
+									</g>
+									<g data-fragment-index="3" class="fragment">
+										<path transform="rotate(180 221.305 427.485)" fill="#ff5656" d="m184.80499,407.48499l54.75,0l18.25,20l-18.25,20l-54.75,0l18.25,-20l-18.25,-20z" id="svg_10" stroke-width="0" stroke="#000"/>
+										<text fill="#ffffff" stroke="#000" stroke-width="0" x="201" y="431" id="svg_11" font-size="12" font-family="Noto Sans JP" text-anchor="start" xml:space="preserve" font-weight="bold">HEAD</text>
+									</g>
+									<g data-fragment-index="2" class="fragment fade-in-then-out">
+										<path transform="rotate(180 391.305 196.485)" fill="#ff5656" d="m354.80499,176.48499l54.75,0l18.25,20l-18.25,20l-54.75,0l18.25,-20l-18.25,-20z" id="svg_13" stroke-width="0" stroke="#000"/>
+										<text fill="#ffffff" stroke="#000" stroke-width="0" x="371" y="200" id="svg_14" font-size="12" font-family="Noto Sans JP" text-anchor="start" xml:space="preserve" font-weight="bold">HEAD</text>
+									</g>
+									<g data-fragment-index="1" class="fragment fade-in-then-out">
+										<path transform="rotate(180 391.305 81.485)" fill="#ff5656" d="m354.80499,61.48499l54.75,0l18.25,20l-18.25,20l-54.75,0l18.25,-20l-18.25,-20z" id="svg_15" stroke-width="0" stroke="#000"/>
+										<text fill="#ffffff" stroke="#000" stroke-width="0" x="371" y="85" id="svg_17" font-size="12" font-family="Noto Sans JP" text-anchor="start" xml:space="preserve" font-weight="bold">HEAD</text>
+									</g>
+									<g data-fragment-index="0" class="fragment">
+										<path fill="#aa56ff" d="m34.80499,178.48499l54.75,0l18.25001,20l-18.25001,20l-54.75,0l18.25,-20l-18.25,-20z" id="svg_18" stroke-width="0" stroke="#000"/>
+										<text fill="#ffffff" stroke="#000" stroke-width="0" x="59" y="202" id="svg_19" font-size="12" font-family="Noto Sans JP" text-anchor="start" xml:space="preserve" font-weight="bold">master</text>
+									</g>
+									<g data-fragment-index="0" class="fragment fade-in-then-out">
+										<path transform="rotate(180 221.305 196.485)" fill="#ff5656" d="m184.80499,176.48499l54.75,0l18.25,20l-18.25,20l-54.75,0l18.25,-20l-18.25,-20z" id="svg_20" stroke-width="0" stroke="#000"/>
+										<text fill="#ffffff" stroke="#000" stroke-width="0" x="201" y="200" id="svg_21" font-size="12" font-family="Noto Sans JP" text-anchor="start" xml:space="preserve" font-weight="bold">HEAD</text>
+									</g>
+									<g data-fragment-index="2" class="fragment">
+										<path fill="#bf5f00" d="m204.80499,176.48499l54.75,0l18.25,20.00002l-18.25,20l-54.75,0l18.25,-20l-18.25,-20.00002z" id="svg_22" stroke-width="0" stroke="#000"/>
+										<text fill="#ffffff" stroke="#000" stroke-width="0" x="226" y="200" id="svg_23" font-size="12" font-family="Noto Sans JP" text-anchor="start" xml:space="preserve" font-weight="bold">branch1</text>
+									</g>
+								</g>
+							</svg>
+							<pre class="bash" style="width: 45%; height: fit-content; align-self: center;"><code data-line-numbers data-trim data-noescape>
+								git commit –m "Test"
+								git checkout branch1
+								git reset HEAD~1
+								git checkout SHA-1
+							</code></pre>
+						</div>
 					</section>
 				</section>
 				<section>
